--- a/Configuration/Views.yaml
+++ b/Configuration/Views.yaml
@@ -4,3 +4,8 @@
     partialRootPaths:
       'MapSeven.Neos.FrontendUserManager': 'resource://MapSeven.Neos.Snippets/Private/Partials'
     templateRootPathPattern: 'resource://MapSeven.Neos.Snippets/Private/Templates/TypoScriptObjects/User'
+-
+  requestFilter: 'isPackage("Flowpack.Snippets")'
+  options:
+    partialRootPaths:
+      'Flowpack.Snippets': 'resource://MapSeven.Markdown/Private/Partials'
