--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mapseven/neos/snippets",
+    "name": "mapseven/neos-snippets",
     "type": "typo3-flow-site",
     "description": "Add description here",
     "require": {
