--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -4,23 +4,70 @@
 # only those that are rendered in your TypoScript and Template
 # are visible on your page.
 ---
-'TYPO3.Neos.NodeTypes:Page':
+'Flowpack.Snippets:Snippet':
+  superTypes: ['TYPO3.Neos:Document']
+  childNodes:
+    'main':
+      type: 'TYPO3.Neos:ContentCollection'
+    'sidebar':
+      type: 'TYPO3.Neos:ContentCollection'
+  ui:
+    label: 'Snippet'
+    icon: 'icon-code'
+    position: 100
+    inspector:
+      groups:
+        document:
+          label: 'Title'
+        layout:
+          label: 'Layout'
+          position: 150
   properties:
-    hideAtAnyLogin:
-      type: boolean
-      ui:
-        label: 'Hide at Login'
-        inspector:
-          group: 'visibility'
-    showAtAnyLogin:
-      type: boolean
-      ui:
-        label: 'Show at Login'
-        inspector:
-          group: 'visibility'
-    navIcon:
+    layout:
       type: string
       ui:
-        label: 'Nav Icon'
+        label: 'Layout for this page only'
+        reloadIfChanged: TRUE
         inspector:
-          group: 'document'
+          group: 'layout'
+          editor: 'TYPO3.Neos/Inspector/Editors/SelectBoxEditor'
+          editorOptions:
+            values:
+              'blogLeftsidebar':
+                label: 'leftsidebar'
+              'blogRightsidebar':
+                label: 'rightsidebar'
+
+'Flowpack.Snippets:Page':
+  superTypes: ['TYPO3.Neos:Document']
+  childNodes:
+    'main':
+      type: 'TYPO3.Neos:ContentCollection'
+    'sidebar':
+      type: 'TYPO3.Neos:ContentCollection'
+  ui:
+    label: 'Page with Sidebar'
+    icon: 'icon-file'
+    position: 100
+    inspector:
+      groups:
+        document:
+          label: 'Title'
+        layout:
+          label: 'Layout'
+          position: 150
+  properties:
+    layout:
+      type: string
+      ui:
+        label: 'Layout for this page only'
+        reloadIfChanged: TRUE
+        inspector:
+          group: 'layout'
+          editor: 'TYPO3.Neos/Inspector/Editors/SelectBoxEditor'
+          editorOptions:
+            values:
+              'pageLeftsidebar':
+                label: 'leftsidebar'
+              'pageRightsidebar':
+                label: 'rightsidebar'
